# cv_project_cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  debug.sh  gen.sh  release.sh
application_project/: CMakeLists.txt  application_project.cpp  application_project.h  settings-template.yaml  settings.cpp  settings.h  settings.yaml
application_project/augmentations/: geometry.cpp
application_project/cmake/: common_packages.cmake  fetch_content.cmake  paths.cmake
application_project/cmake/linux/: include.cmake  linux.cmake  paths.cmake
application_project/cmake/windows/: include.cmake  paths.cmake  windows.cmake
application_project/datasets/: cifar10.cpp  cifar10.h  data_helper.cpp  data_helper.h  loader_funcs.cpp  loader_funcs.h  mnist.cpp  mnist.h  tmp.cpp  tmp.h
application_project/functions/: common.cpp  common.h  gradcam.cpp  gradcam.h  handle_args.cpp  handle_args.h  inference.cpp  inference.h  load_model.h  train_lenet.cpp  train_lenet.h  visualise.cpp  visualise.h
application_project/include/: application_project.h  settings.h
application_project/include/augmentations/: geometry.h
application_project/include/database/: database.h  database_helpers.h  database_map.h  param_info.h  query_template_manager.h
application_project/include/database/database_helpers/: database_map.h  param_info.h
application_project/include/datasets/: data_helper.h  loader_funcs.h  mnist.h
application_project/include/functions/: database.h  experiments_database.h  gradcam.h  inference.h  train_lenet.h  visualise.h
application_project/include/metrics/: classification_metrics.h  timer.h
application_project/include/models/: common.h  lenet.h  model_wrapper.h
application_project/include/optims/scheds/: warmup.h
application_project/include/plots/: plots.h
application_project/metrics/: classification_metrics.cpp  classification_metrics.h
application_project/models/: common.cpp  common.h  lenet.cpp  lenet.h  model_wrapper.cpp  model_wrapper.h  resnet.cpp  resnet.h
application_project/optims/scheds/: warmup.cpp
application_project/src/: settings.cpp
application_project/src/augmentations/: geometry.cpp
application_project/src/database/: database.cpp  database_helpers.cpp  database_map.cpp  param_info.cpp  query_template_manager.cpp
application_project/src/database/database_helpers/: database_map.cpp  param_info.cpp
application_project/src/datasets/: cifar10.cpp  data_helper.cpp  loader_funcs.cpp  mnist.cpp
application_project/src/functions/: common.cpp  database.cpp  experiments_database.cpp  gradcam.cpp  handle_args.cpp  inference.cpp  train_lenet.cpp  visualise.cpp
application_project/src/metrics/: classification_metrics.cpp  timer.cpp
application_project/src/models/: common.cpp  lenet.cpp  model_wrapper.cpp  resnet.cpp
application_project/src/optims/scheds/: warmup.cpp
application_project/src/plots/: plots.cpp
application_project/tests/: CMakeLists.txt  code.cpp  code.h  hello_test.cpp
application_project/weights/: inference.pth  lenet_inference.pth  lenet_mnist.pth  model.pth  working.pth
